# Time-Series-Alpha-Signal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  apply_all_changes.sh  faang_only_final_metrics.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  combined_backtests.yml  real_data_backtests.yml
results/broad40_12_1_baseline/: daily_returns.csv  metrics.json
results/broad40_12_1_risk/: daily_returns.csv  metrics.json
results/broad40_12m_mom_risk/: daily_returns.csv  metrics.json
results/broad40_20d_mom_risk/: daily_returns.csv  metrics.json
results/broad40_combo_risk/: daily_returns.csv  metrics.json
results/broad40_eqw_baseline/: daily_returns.csv  metrics.json
results/broad40_eqw_risk/: daily_returns.csv  metrics.json
results/broad40_mom_risk/: daily_returns.csv  metrics.json
results/broad40_resid_mom_baseline/: daily_returns.csv  metrics.json
results/broad40_resid_mom_risk/: daily_returns.csv  metrics.json
results/broad40_wf_baseline/: daily_returns.csv  metrics.json
results/broad40_wf_combo_risk/: daily_returns.csv  metrics.json
results/broad40_wf_risk/: daily_returns.csv  metrics.json
results/crypto_combined_eqw/: daily_returns.csv  metrics.json
results/crypto_combined_eqw_risk/: daily_returns.csv  metrics.json
results/crypto_combined_wf/: daily_returns.csv  metrics.json
results/crypto_combined_wf_risk/: daily_returns.csv  metrics.json
results/faang_combined_eqw/: daily_returns.csv  metrics.json
results/faang_combined_eqw_risk/: daily_returns.csv  metrics.json
results/faang_combined_wf/: daily_returns.csv  metrics.json
results/faang_combined_wf_risk/: daily_returns.csv  metrics.json
results/faang_ewma_2018_2023/: daily_returns.csv  metrics.json  weights.csv
scripts/: benchmark_eqw.py  fetch_data.py  heatmap.py  run.py  run_combined.py
src/time_series_alpha_signal/: __init__.py  backtest.py  cli.py  combiner.py  cv.py  data.py  evaluation.py  features.py  labels.py  metrics.py  models.py  optimize.py  optimizer.py  risk_model.py  signals.py
src/timeseries_alpha/: __init__.py  analytics.py  backtest.py  cli.py  data.py  metrics.py  plot.py  plots.py  signals.py
tests/: backtest.py  test_aligment.py  test_alignment.py  test_backtest.py  test_backtest_core.py  test_cli.py  test_combiner.py  test_cv.py  test_models.py  test_risk_model.py
tmpdir/: metrics.json
