[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries_alpha"
version = "0.1.0"
description = "Vectorized cross-sectional time-series backtesting (no-lookahead, L1 exposure, turnover costs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pandas==2.2.2", "numpy==1.26.4", "matplotlib==3.8.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
tsalpha = "timeseries_alpha.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true




