[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-alpha-signal"
version = "0.1.0"
description = "Time-series alpha signals with reproducible backtests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "statsmodels>=0.13",
  "yfinance>=0.2"
]

[project.scripts]
tsalpha = "time_series_alpha_signal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["time_series_alpha_signal"]
